--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,14 @@
 .container-2{
     display :grid;
     grid-gap: 3px;
-    grid-template:220px 220px 220px/220px 220px;
+    grid-template:repeat(8,220px)/220px 220px;
     justify-content: center;
     
 }
 .nav{
     display: grid;
     grid-column: 1/-1;
-    justify-content: center;
-    align-content: center;
-}
+    justify-content: center;}
 .content{
     /*background: #225b3b;*/
     justify-content: center;
