--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
 .container-2{
     display :grid;
     grid-gap: 3px;
-    grid-template:repeat(4,220px)/220px 220px;
+    grid-template-columns:repeat(auto-fit,200px) ;
+    grid-template-rows: repeat(4,220px);
     justify-content: center;
     
 }
