--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 .container-2{
     display :grid;
     grid-gap: 3px;
-    grid-template-columns:repeat(auto-fit,200px) ;
+    grid-template-columns:repeat(auto-fit,minmax(220px,1fr)) ;
     grid-template-rows: repeat(4,220px);
     justify-content: center;
     
