--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,13 @@
     display :grid;
     grid-gap: 3px;
     grid-template-columns:repeat(auto-fit,minmax(220px,1fr)) ;
-    grid-template-rows: repeat(4,220px);
+    grid-auto-rows: 220px;
     justify-content: center;
     
 }
 .nav{
-    display: grid;
-    grid-column: 1/-1;
-    justify-content: center;
-    
+    display: flex;
+    justify-self: center;
     }
 
 .content{
