--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     justify-items: center;
     
 }
-.container-2{
+.main{
     display :grid;
     grid-gap: 3px;
     grid-template-columns:repeat(auto-fit,minmax(220px,1fr)) ;
