--- a/grid-example-2/style.css
+++ b/grid-example-2/style.css
@@ -1,9 +1,18 @@
+.header{
+    display: grid;
+    grid-template-columns:1fr;
+    grid-template-rows: 1fr;
+}
+.header img {
+   height: 100%;
+   width: 100%;
+   object-fit: contain; 
+}
 .container{
     display: grid;
-    justify-items: center;
-    grid-template-columns:1fr 400px 1fr;
+    grid-template-columns:1fr;
     grid-template-rows: repeat(6,150px);
-    
+    justify-items:center ;
 }
 .container img {
    height: 100%;
@@ -12,29 +21,22 @@
 }
 
 /*Empiezo con los Items*/
-.item1{
-    grid-column: 2;
-    grid-row: 1 / 2;
-}
+
 .item2{
     display: flex;
-    grid-column: 2;
-    grid-row: 3 ;
+    grid-row: 2 ;
 }
 .item3{
     display: flex;
-    grid-column: 2;
-    grid-row: 4 ;
+    grid-row: 3 ;
 }
 .item4{
     display: flex;
-    grid-column: 2;
-    grid-row: 5 ;
+    grid-row: 4 ;
 }
 .item5{
     display: flex;
-    grid-column: 2;
-    grid-row: 6 ;
+    grid-row: 5 ;
 }
 
 
