--- a/style.css
+++ b/style.css
@@ -17,18 +17,15 @@
 .main{
     display: grid;
     grid-template-columns:1fr;
-    grid-template-rows: repeat(4,150px);
+    grid-template-rows: repeat(4,200px);
     align-items: center;
     justify-items: center;
+    gap: px;
         img {
             height: 100%;
             width: 100%;
             object-fit: contain; 
             }
-        div {
-            width: 300px;
-            height: 120px;
-        }
 }
 .footer{
     display: grid;
