--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 .main{
     display: grid;
     grid-template-columns:1fr;
-    grid-template-rows: repeat(4,200px);
+    grid-template-rows: repeat(4,220px);
     align-items: center;
     justify-items: center;
     gap: 5px;
@@ -29,7 +29,7 @@
 }
 .footer{
     display: grid;
-    grid-template-columns:1fr;
+    grid: template columns 100%;;
     grid-template-rows: 1fr;
     height: 60px;
     background-color: blue;
