--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 .nav{
     display: grid;
-    grid-template-columns:1f;
+    grid-template-columns:1fr;
     grid-row: 1fr ;
     height: 60px;
     background-color: blue;
@@ -30,7 +30,7 @@
 }
 .footer{
     display: grid;
-    grid-template-columns:1f;
+    grid-template-columns:1fr;
     grid-row: 1fr ;
     height: 60px;
     background-color: blue;
