--- a/html/style.css
+++ b/html/style.css
@@ -17,16 +17,11 @@
 }
 .main{
     display: grid;
-    grid-template-columns:1fr;
+    grid-template-columns:repeat(12,1fr);
     grid-template-rows: repeat(4,220px);
-    align-items: center;
-    justify-items: center;
+    border: 3px solid black;
     gap: 5px;
-        img {
-            height: 100%;
-            width: 100%;
-            object-fit: contain; 
-            }
+        
 }
 .footer{
     display: grid;
@@ -39,7 +34,7 @@
 
 /*Empieza main*/
 
-.item1{
+/*.item1{
     display: flex;
     grid-row: 1 ;
 }
@@ -54,7 +49,7 @@
 .item4{
     display: flex;
     grid-row: 4 ;
-}
+}*/
 
 
 
