--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@
 }
 .main{
     display: grid;
-    grid-template-columns:1fr;
+    grid-template-columns:1fr 3fr 1fr;
     grid-template-rows: repeat(4,220px);
-    align-items: center;
-    justify-items: center;
+    grid-column: 3 / 5;
+    
     gap: 5px;
         img {
             height: 100%;
