--- a/style.css
+++ b/style.css
@@ -10,28 +10,24 @@
 .nav{
     display: grid;
     grid-template-columns:1fr;
-    grid-row: 1fr ;
     height: 60px;
     background-color: blue;
     gap: 5px;
 }
 .main{
     display: grid;
-    grid-template-columns:1fr 3fr 1fr;
+    grid-template-columns: 100px 300px 300px 100px;
     grid-template-rows: repeat(4,220px);
-    grid-column: 3 / 5;
-    
     gap: 5px;
-        img {
+        /*img {
             height: 100%;
             width: 100%;
             object-fit: contain; 
-            }
+            }*/
 }
 .footer{
     display: grid;
     grid-template-columns:1fr;
-    grid-row: 1fr ;
     height: 60px;
     background-color: blue;
 }
@@ -40,21 +36,21 @@
 /*Empieza main*/
 
 .item1{
-    display: flex;
+    grid-column: 2;
     grid-row: 1 ;
 }
 .item2{
-    display: flex;
-    grid-row: 2 ;
+    grid-column: 3;
+    grid-row: 1 ;
 }
-.item3{
-    display: flex;
+/*.item3{
+    grid-column: 2;
     grid-row: 3 ;
 }
 .item4{
-    display: flex;
+    grid-column: 2;
     grid-row: 4 ;
-}
+}*/
 
 
 
