--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .header{
     display: grid;
-    grid-template-columns:1fr;
+    grid: template columns 650px;
         img {
             height: 100%;
             width: 100%;
@@ -16,7 +16,7 @@
 }
 .main{
     display: grid;
-    grid-template-columns: 100px 300px 300px 100px;
+    grid-template-columns: 100px 200px 200px 100px;
     grid-template-rows: repeat(4,220px);
     gap: 5px;
         /*img {
