--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 .main{
     display: grid;
-    grid-template-columns: 100px 200px 200px 100px;
+    grid-template-columns: 50pxpx 200px 200px 50px;
     grid-template-rows: repeat(4,220px);
     gap: 5px;
         /*img {
