--- a/style.css
+++ b/style.css
@@ -43,14 +43,30 @@
     grid-column: 3;
     grid-row: 1 ;
 }
-/*.item3{
+.item3{
+    grid-column: 2;
+    grid-row: 2 ;
+}
+.item4{
+    grid-column: 3;
+    grid-row: 2 ;
+}
+.item5{
     grid-column: 2;
     grid-row: 3 ;
 }
-.item4{
+.item6{
+    grid-column: 3;
+    grid-row: 3 ;
+}
+.item7{
     grid-column: 2;
     grid-row: 4 ;
-}*/
+}
+.item8{
+    grid-column: 3;
+    grid-row: 4 ;
+}
 
 
 
